--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "html-react-parser": "^5.2.2",
+    "motion": "^12.16.0",
     "next": "^15.3.3",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
@@ -25,6 +27,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.5.0",
+    "tailwind-merge": "^3.3.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
