--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "html-react-parser": "^5.2.2",
+    "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "next": "^15.3.3",
     "normalize.css": "^8.0.1",
