--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "next": "^15.3.3",
+    "next-themes": "^0.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.5.0",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
