--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.5.0",
