--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "web",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start"
   },
@@ -22,7 +21,7 @@
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
-    "next": "^15.3.3",
+    "next": "^13.4.10",
     "next-themes": "^0.4.6",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
