--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tabler/icons-react": "^3.34.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -23,16 +24,20 @@
     "framer-motion": "^12.15.0",
     "html-react-parser": "^5.2.2",
     "lucide-react": "^0.513.0",
-    "motion": "^12.23.6",
+    "motion": "^12.23.11",
     "next": "^13.4.10",
     "next-themes": "^0.4.6",
     "normalize.css": "^8.0.1",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.16.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.5.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "shiki": "^3.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3"
@@ -42,6 +47,7 @@
     "@types/node": "22.15.29",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
