--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.34.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
@@ -23,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "html-react-parser": "^5.2.2",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.513.0",
     "motion": "^12.23.11",
     "next": "^13.4.10",
