--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.34.1",
     "autoprefixer": "^10.4.21",
